--- a/compare.core.test.unit/pom.xml
+++ b/compare.core.test.unit/pom.xml
@@ -14,6 +14,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>dev.dietermai</groupId>
+			<artifactId>compare.core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	
+		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<version>${org.junit.jupiter.version}</version>
