Adding classes and test for fileTree/rootDir/fileTreeBuilder

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,4 +11,13 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../build/maven/base</relativePath>
 	</parent>
+
+	<dependencies>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>${javax.inject.version}</version>
+		</dependency>
+
+	</dependencies>
 </project>
