--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,7 +3,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>compare.core</artifactId>
+	<artifactId>compare.service</artifactId>
 
 	<parent>
 		<groupId>dev.dietermai</groupId>
@@ -11,4 +11,12 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../build/maven/base</relativePath>
 	</parent>
+
+	<dependencies>
+		<dependency>
+			<groupId>dev.dietermai</groupId>
+			<artifactId>compare.core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
